[project]
name = "px"
version = "0.1.0"
description = "Async HTTP Server in Python"
requires-python = ">=3.7"
dependencies = [
  ]
authors = [
    {name="BoBoBo", email="bobobomail@yeah.net"}
  ]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL v3.0",
    "Operating System :: OS Independent",
  ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
